--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "@mui/icons-material": "^5.4.1",
     "@mui/lab": "^5.0.0-alpha.68",
     "@mui/material": "^5.3.1",
+    "axios": "^0.26.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "sweetalert2": "^11.4.0",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
   },
