--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "@mui/icons-material": "^5.4.1",
     "@mui/lab": "^5.0.0-alpha.68",
     "@mui/material": "^5.3.1",
+    "@reduxjs/toolkit": "^1.7.2",
     "axios": "^0.26.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "redux": "^4.1.2",
     "sweetalert2": "^11.4.0",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
@@ -50,6 +53,7 @@
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "@types/react-helmet": "^6.1.5",
+    "@types/react-redux": "^7.1.22",
     "@types/react-router-dom": "^5.3.3"
   }
 }
