--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@material-ui/core": "^4.12.3",
     "@mui/icons-material": "^5.4.1",
     "@mui/lab": "^5.0.0-alpha.68",
     "@mui/material": "^5.3.1",
+    "@mui/x-data-grid": "^5.5.1",
     "@reduxjs/toolkit": "^1.7.2",
     "axios": "^0.26.0",
     "react": "^17.0.2",
